# cic-stack-v1

./: .env  .gitignore  .gitlab-ci.yml  .gitmodules  .semverbot.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CORE.md  LICENSE  README.md  docker-compose.build.yml  docker-compose.override.yml  docker-compose.yml  dump.sh  requirements.txt
apps/cic-cache/: .coveragerc  .envrc_example  .gitignore  .gitlab-ci.yml  CHANGELOG  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  test_requirements.txt
apps/cic-cache/.config/: database.ini  eth.ini
apps/cic-cache/.config/test/: bancor.ini  database.ini  eth.ini
apps/cic-cache/cic_cache/: __init__.py  api.py  cache.py  version.py
apps/cic-cache/cic_cache/cli/: __init__.py  arg.py  base.py  celery.py  chain.py  config.py  registry.py  rpc.py
apps/cic-cache/cic_cache/db/: __init__.py  list.py
apps/cic-cache/cic_cache/runnable/: tasker.py  tracker.py
apps/cic-cache/cic_cache/tasks/: tx.py
apps/cic-cache/config/: celery.ini  cic.ini  database.ini  eth.ini  syncer.ini
apps/cic-cache/config/docker/: bancor.ini  cic.ini  database.ini  eth.ini  syncer.ini
apps/cic-cache/config/test/: cic.ini  database.ini
apps/cic-cache/db/initdb_files/: create_all_db.sql
apps/cic-cache/db/psycopg2/: db.sql
apps/cic-cache/db/pysqlite/: db.sql
apps/cic-cache/doc/openapi/: server.yml
apps/cic-cache/docker/: Dockerfile  Dockerfile_ci  db.sh  run_tests.sh  start_tracker.sh
apps/cic-cache/examples/bloom_client/: package-lock.json  parse.js
apps/cic-cache/scripts/: migrate.py  migrate_cic_cache.py
apps/cic-cache/tests/: conftest.py  fixtures_celery.py  fixtures_config.py  fixtures_database.py  test_api.py  test_cache.py  test_query.py  test_tag.py  test_task.py
apps/cic-cache/tests/cli/: test_cli_args.py  test_cli_celery.py  test_cli_chain.py
apps/cic-cache/tests/filters/: conftest.py  test_erc20.py  test_faucet.py
apps/cic-eth/: .coveragerc  .envrc_dev_example  .envrc_example  .gitignore  .gitlab-ci.yml  CHANGELOG  MANIFEST.in  README.md  admin_requirements.txt  requirements.txt  server_requirements.txt  services_requirements.txt  setup.cfg  setup.py  test_requirements.txt  tools_requirements.txt
apps/cic-eth-aux/erc20-demurrage-token/: requirements.txt  setup.cfg  setup.py  test_requirements.txt
apps/cic-eth-aux/erc20-demurrage-token/tests/: conftest.py  test_demurrage_task.py
apps/cic-eth/cic_eth/: __init__.py  debug.py  encode.py  enum.py  error.py  registry.py  stat.py  task.py  version.py
apps/cic-eth/cic_eth/admin/: ctrl.py  debug.py  nonce.py  token.py
apps/cic-eth/cic_eth/api/: __init__.py  admin.py  api_admin.py  api_task.py  base.py
apps/cic-eth/cic_eth/callbacks/: callback.py  http.py  noop.py  redis.py  (+1 more)
apps/cic-eth/config/: celery.ini  cic.ini  database.ini  eth.ini  redis.ini  signer.ini  syncer.ini  tasks.ini
apps/cic-eth/crypto_dev_signer_config/: config.ini  database.ini
apps/cic-eth/docker/: Dockerfile  Dockerfile_ci  Dockerfile_server  db.sh  gunicorn.conf.py  run_tests.sh  start_dispatcher.sh  start_manager.sh  start_retry.sh  start_tasker.sh  start_tracker.sh
apps/cic-eth/examples/: api_callback.py
apps/cic-eth/scripts/: generator.py  insert_tx.py  migrate.py
apps/cic-eth/tests/: conftest.py  fixtures_account.py  fixtures_bancor.py  fixtures_celery.py  fixtures_config.py  fixtures_contract.py  fixtures_database.py  fixtures_faucet.py  fixtures_keystore.py  fixtures_registry.py  fixtures_role.py  fixtures_token.py  fixtures_transferapproval.py  fixtures_web3.py  run_tests.sh  test_basic.py  test_chainlib.py  test_path.py  test_sign.py
apps/cic-notify/: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG  MANIFEST.in  requirements.txt  setup.cfg  setup.py  test_requirements.txt
apps/cic-notify/cic_notify/: api.py  error.py  mux.py  version.py
apps/cic-notify/docker/: Dockerfile  Dockerfile.service  Dockerfile_ci  db.sh  run_tests.sh  start_tasker.sh
apps/cic-notify/scripts/: migrate.py  send_sms.py
apps/cic-notify/tests/: conftest.py  fixtures_celery.py  fixtures_database.py  test_sms.py
apps/cic-ussd/: .coveragerc  .gitignore  .gitlab-ci.yml  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  test_requirements.txt
apps/cic-ussd/.config/: app.ini  cic.ini  database.ini  pgp.ini  redis.ini
apps/cic-ussd/cic_ussd/: account.py  accounts.py  balance.py  cache.py  chain.py  conversions.py  encoder.py  error.py  notifications.py  operations.py  phone_number.py  processor.py  redis.py  requests.py  time.py  transactions.py  translation.py  validator.py  version.py
apps/cic-ussd/config/: app.ini  celery.ini  cic.ini  phone.ini  pip.ini  redis.ini  translations.ini  ussd.ini
apps/cic-ussd/doc/: renderer.js
apps/cic-ussd/docker/: Dockerfile  Dockerfile_ci  db.sh  run_tests.sh  start_cic_user_server.sh  start_cic_user_tasker.sh  start_cic_user_ussd_server.sh  start_tasker.sh  start_uwsgi.sh  uwsgi.ini
apps/cic-ussd/scripts/: graph_state_machine.py  migrate.py
apps/cic-ussd/states/: account_management_states.json  account_statement_states.json  exit_states.json  non_resumable_states.json  pin_management_states.json  signup_states.json  token_management_states.json  transaction_states.json  user_metadata_states.json  user_profile_states.json
apps/cic-ussd/tests/: conftest.py
apps/cic-ussd/transitions/: account_management_transitions.json  account_statement_transitions.json  age_setting_transitions.json  business_profile_setting_transitions.json  exit_transitions.json  gender_setting_transitions.json  language_setting_transitions.json  location_setting_transitions.json  name_setting_transitions.json  navigation_transitions.json  pin_guard_transitions.json  pin_management_transitions.json  pin_reset_transitions.json  pin_setting_transitions.json  products_setting_transitions.json  signup_transitions.json  start_menu_transitions.json  token_management_transitions.json  transaction_transitions.json  user_metadata_transitions.json  user_profile_transitions.json
apps/util/cic-ussd-cli/: CHANGELOG  requirements.txt  setup.cfg  setup.py
(+1595 files in other folders)
