[metadata]
name = cic-cache
description = CIC Cache API and server
version = 0.3.0a2
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/cic-eth
keywords =
	cic
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
python_requires = >= 3.6
include_package_data = True
packages = 
	cic_cache
	cic_cache.tasks
	cic_cache.db
	cic_cache.db.models
	cic_cache.cli
	cic_cache.runnable
	cic_cache.runnable.daemons
	cic_cache.runnable.daemons.filters
scripts =
	./scripts/migrate_cic_cache.py

[options.entry_points]
console_scripts =
	cic-cache-trackerd = cic_cache.runnable.daemons.tracker:main
	cic-cache-serverd = cic_cache.runnable.daemons.server:main
	cic-cache-taskerd = cic_cache.runnable.daemons.tasker:main
	cic-cache-list = cic_cache.runable.list:main
