[metadata]
name = cic-eth
version = attr: cic_eth.version.__version_string__
description = CIC Network Ethereum interaction 
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/cic-eth
keywords =
	cic
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
python_requires = >= 3.6
packages = 
	cic_eth
	cic_eth.admin
	cic_eth.eth
	cic_eth.api
	cic_eth.db
	cic_eth.db.models
	cic_eth.queue
	cic_eth.sync
	cic_eth.runnable
	cic_eth.callbacks
scripts =
	./scripts/migrate.py

[options.entry_points]
console_scripts =
	cic-eth-tasker = cic_eth.runnable.tasker:main
	cic-eth-manager = cic_eth.runnable.manager:main
	cic-eth-tag = cic_eth.runnable.tag:main
	cic-eth-dispatcher = cic_eth.runnable.dispatcher:main
	cic-eth-retrier = cic_eth.runnable.retry:main
	cic-eth-inspect = cic_eth.runnable.view:main
	cic-eth-ctl = cic_eth.runnable.ctrl:main
