[metadata]
name = cic-eth
version = attr: cic_eth.version.__version_string__
description = CIC Network Ethereum interaction 
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/cic-eth
keywords =
	cic
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
python_requires = >= 3.6
include_package_data = True
packages = 
	cic_eth
	cic_eth.cli
	cic_eth.admin
	cic_eth.eth
	cic_eth.api
	cic_eth.db
	cic_eth.db.models
	cic_eth.queue
	cic_eth.ext
	cic_eth.runnable
	cic_eth.runnable.daemons
	cic_eth.runnable.daemons.filters
	cic_eth.callbacks
	cic_eth.sync
	cic_eth.check
	# should be concealed behind extras "test" if possible (but its not unfortunately)
	cic_eth.pytest
	cic_eth.pytest.mock
scripts =
	./scripts/migrate.py

[options.entry_points]
console_scripts =
	# daemons
	cic-eth-taskerd = cic_eth.runnable.daemons.tasker:main [services]
	cic-eth-trackerd = cic_eth.runnable.daemons.tracker:main [services]
	cic-eth-dispatcherd = cic_eth.runnable.daemons.dispatcher:main [services]
	cic-eth-retrierd = cic_eth.runnable.daemons.retry:main [services]
	# tools	
	cic-eth-create = cic_eth.runnable.create:main [tools]
	cic-eth-inspect = cic_eth.runnable.view:main [tools]
	cic-eth-ctl = cic_eth.runnable.ctrl:main [tools]
	cic-eth-info = cic_eth.runnable.info:main [tools]
	# TODO: Merge this with ctl when subcmds sorted to submodules
	cic-eth-tag = cic_eth.runnable.tag:main [tools]
	cic-eth-resend = cic_eth.runnable.resend:main [tools]
	cic-eth-transfer = cic_eth.runnable.transfer:main [tools]
