[metadata]
name = cic-notify
description = CIC notifications service
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/cic-eth
keywords =
	cic
	cryptocurrency
	ethereum
	sms
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
python_requires = >= 3.6
packages = 
	cic_notify
	cic_notify.db
	cic_notify.db.models
	cic_notify.ext
	cic_notify.tasks
	cic_notify.tasks.sms
	cic_notify.runnable
scripts =
	./scripts/migrate.py

[options.entry_points]
console_scripts =
	cic-notify-tasker = cic_notify.runnable.tasker:main
	cic-notify-send = cic_notify.runnable.send:main
