[metadata]
name = cic-notify
description = CIC notifications service
author =
	Louis Holbrook
	Philip Wafula
author_email =
    dev@holbrook.no
    dev@wafula.me
url = https://gitlab.com/grassrootseconomics/cic-internal-integration/-/tree/master/apps/cic-notify
version = 0.4.4
keywords =
	cic
	cryptocurrency
	ethereum
	sms
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
include_package_data = True
python_requires = >= 3.6
packages = 
	cic_notify
	cic_notify.db
	cic_notify.db.models
	cic_notify.ext
	cic_notify.runnable
	cic_notify.tasks
	cic_notify.tasks.default
	cic_notify.tasks.sms
scripts =
	./scripts/migrate.py

[options.package_data]
* =
	cic_notify/data/config/*

[options.entry_points]
console_scripts =
	cic-notify-tasker = cic_notify.runnable.tasker:main
	cic-notify-send = cic_notify.runnable.send:main
