[metadata]
name = cic-ussd
description = CIC Network USSD Interaction
author =
	Louis Holbrook
	Philip Wafula
	Spencer Ofwiti
author_email =
    dev@holbrook.no
    dev@wafula.me
    maxspencer56@gmail.com
url = https://gitlab.com/grassrootseconomics/cic-ussd
keywords =
    cic
    ussd
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
license = GPL3
licence_files =
	LICENSE.md

[options]
python_requires = >= 3.6
packages =
	cic_ussd
	cic_ussd.db
	cic_ussd.db.models
	cic_ussd.files
	cic_ussd.menu
	cic_ussd.runnable
	cic_ussd.session
	cic_ussd.state_machine
	cic_ussd.state_machine.logic
	cic_ussd.tasks
scripts =
	./scripts/migrate.py

[options.entry_points]
console_scripts =
	cic-ussd-tasker = cic_ussd.runnable.tasker:main