[metadata]
name = cic-ussd-cli
version = 0.3.2
description = CIC Network USSD Interaction
author =
	Louis Holbrook
	Philip Wafula
author_email =
    dev@holbrook.no
    dev@wafula.me
url = https://gitlab.com/grassrootseconomics/cic-ussd
keywords =
    cic
    ussd
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
license = GPL3
licence_files =
	LICENSE.md

[options]
python_requires = >= 3.6
packages =
	cic_ussd_cli.runnable

[options.entry_points]
console_scripts =
	cic-ussd-client = cic_ussd_cli.runnable.client:main
