[metadata]
name = cic-dev-fake
version = 0.0.1
description = Fake data generator tools
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/nolash/simple-multisig
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
python_requires = >= 3.6
install_requires =
	web3==5.12.2
	vobject==0.9.6.1
	faker==4.17.1
tests_require =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20
scripts =
	scripts/users.py
	scripts/tx_generator.py
	scripts/tx_seed.py

[options.extras_require]
testing =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20
